fix font to be visible

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -53,3 +53,9 @@ p {
   max-width: 100%;
   max-height: 100%;
 }
+
+#beer:hover {
+  color: transparent;
+  transition: 1s all;
+  margin-left: 10px;
+}
